fix(User): Change agoraNumber to be string
